2007-08-21  Andreas Kupries  <andreask@activestate.com>

	* math.test (matchTolerant): Changed to not use tcltest 2.0+
	  features in a testsuite for tcltest 1.0. Rewritten the tests
	  using this custom comparison command to be tcltest 1.0
	  compliant.

	* pkgIndex.tcl: With permission from Arjen moved math::statistics
	* bessel.test: into the 8.4 section. Due to its new dependency on
	* elliptic.test: math::linearalgebra via multi-variate linear
	* statistics.test: regression it now depends on Tcl 8.4+ too.
	* special.test: Updated the tests using math::statistics for this
	  as well.

2007-08-20  Andreas Kupries  <andreask@activestate.com>

	* bessel.test: Added missing dependency on math::linearalgebra.
	* elliptic.test: (For math::statistics). This not fully ok yet,
	  the Tcl core requirements are out of whack too.

2007-07-10  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* statistics.tcl: Corrected a spelling mistake in name of Zachariadis
	* linalg.test: Removed temporary reference to ferri/ferri.test

2007-07-07  Arjen Markus  <arjenmarkus@users.sourceforge.net>

	* math.test: Added a small tolerance for two tests
	* statistics.man: Added pvar and pstdev, difference between var and pvar documented
	* statistics.tcl: Added population stdev and variance
	* statistics.test: Added tests for pvar and pstdev
	* special.test: Added dependency on math::linearalgebra

2007-06-26  Kevin B. Kenny  <kennykb@acm.org>

	* elliptic.tcl: Removed a spurious 'puts' in the computation of
	Jacobian elliptic functions.
	* special.tcl: Advanced patchlevel to 0.2.1.
	
2007-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bigfloat.man: Fixed all warnings due to use of now deprecated
	* bignum.man:   commands. Added a section about how to give
	* calculus.man: feedback.
	* combinatorics.man:
	* constants.man:
	* fourier.man:
	* fuzzy.man:
	* geometry.man:
	* interpolate.man:
	* linalg.man:
	* math.man:
	* optimize.man:
	* polynomials.man: